# sufat

./: README.md  SUFAT.py  preview.tape  pyproject.toml  sufat_eng.py  sufat_tr.py
