[project]
name = "water-bill-analyzer"
version = "0.1.0"
description = "Water consumption and billing analysis tool using command-line interface."
author = [{ name = "Mohamed babker Ahmed", email = "bdaljlylm23@gmail.com" }]
readme = "README.md"
requires-python = ">=3.10"
keywords = ["water", "bill", "analysis", "cli", "pandas", "matplotlib"]

dependencies = [
"pandas>=2.0.0",
"matplotlib>=3.7.0",
"tabulate>=0.9.0",
]

[project.urls]
Homepage = "https://github.com/Mo-babker/sufat" 
Issues = "https://github.com/Mo-babker/sufat/issues"



[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
py-modules = ["SUFAT"] 

[tool.uv]
package = true

[tool.ruff]
line-length = 120
select = ["I", "F", "E", "W"]
fix = true

[dependency-groups]
dev = ["pytest>=8.3.2", "ruff"]